--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.5",
+    "mongoose-unique-validator": "^3.1.0",
     "validator": "^13.7.0"
   }
 }
